testing/runner/tests/snapshot_tests/subqueries/snapshots/subqueries__not-exists-no-orders.snap
---
source: subqueries.sqltest
expression: "SELECT c.id, c.name, c.email\n    FROM customers c\n    WHERE NOT EXISTS (\n        SELECT 1\n        FROM orders o\n        WHERE o.customer_id = c.id\n    );"
info:
  statement_type: SELECT
  tables:
    - customers
    - orders
  setup_blocks:
    - schema
  database: ":memory:"
---
QUERY PLAN
|--SCAN customers AS c
`--SEARCH o USING INDEX idx_orders_customer

BYTECODE
addr  opcode              p1  p2  p3  p4            p5  comment
   0    Init               0  24   0                 0  Start at 24
   1    OpenRead           0   6   0  k(4,B,B,B,B)   0  table=customers, root=6, iDb=0
   2    Rewind             0  23   0                 0  Rewind table customers
   3      BeginSubrtn      5   0   0                 0  r[5]=NULL
   4      Integer          0   1   0                 0  r[1]=0
   5      Integer          1   7   0                 0  r[7]=1; LIMIT counter
   6      IfNot            7  14   0                 0  if !r[7] goto 14
   7      OpenRead         1   9   0  k(2,B)         0  index=idx_orders_customer, root=9, iDb=0
   8      RowId            0   8   0                 0  r[8]=customers.rowid
   9      SeekGE           1  14   8                 0  key=[8..8]
  10        IdxGT          1  14   8                 0  key=[8..8]
  11        Integer        1   1   0                 0  r[1]=1
  12        DecrJumpZero   7  14   0                 0  if (--r[7]==0) goto 14
  13      Next             1  10   0                 0
  14    Return             5   0   1                 0
  15    Copy               1  10   0                 0  r[10]=r[1]
  16    Not               10   9   0                 0  r[9]=!r[10]
  17    IfNot              9  22   1                 0  if !r[9] goto 22
  18    RowId              0   2   0                 0  r[2]=customers.rowid
  19    Column             0   1   3                 0  r[3]=customers.name
  20    Column             0   2   4                 0  r[4]=customers.email
  21    ResultRow          2   3   0                 0  output=r[2..4]
  22  Next                 0   3   0                 0
  23  Halt                 0   0   0                 0
  24  Transaction          0   1  11                 0  iDb=0 tx_mode=Read
  25  Goto                 0   1   0                 0
