testing/runner/tests/snapshot_tests/subqueries/snapshots/subqueries__run-length-current-window.snap
---
source: subqueries.sqltest
expression: |-
  WITH signal_days AS (
          SELECT DISTINCT date(datetime(ts_ms / 1000, 'unixepoch', '+60 minutes')) AS signal_day
          FROM (
              SELECT id, created_ms AS ts_ms FROM user_messages WHERE actor = 'user'
              UNION ALL
              SELECT id, started_ms AS ts_ms FROM session_starts
              UNION ALL
              SELECT id, created_ms AS ts_ms FROM observed_items WHERE item_kind = 'note' OR item_kind = 'alert'
              UNION ALL
              SELECT id, created_ms AS ts_ms FROM observed_items WHERE item_kind = 'alert'
              UNION ALL
              SELECT id, created_ms AS ts_ms FROM observed_items WHERE item_kind = 'note'
              UNION ALL
              SELECT id, created_ms AS ts_ms FROM journal_entries
          )
          ORDER BY signal_day
      ),
      prior_days AS (
          SELECT signal_day,
                 (
                     SELECT MAX(d2.signal_day)
                     FROM signal_days d2
                     WHERE d2.signal_day < d1.signal_day
                 ) AS previous_day
          FROM signal_days d1
      ),
      run_boundaries AS (
          SELECT signal_day,
                 previous_day,
                 JULIANDAY(signal_day) - JULIANDAY(previous_day) AS day_gap,
                 CASE
                     WHEN JULIANDAY(signal_day) - JULIANDAY(previous_day) = 1 THEN 0
                     ELSE 1
                 END AS run_start
          FROM prior_days
      ),
      run_ids AS (
          SELECT signal_day,
                 SUM(run_start) OVER (ORDER BY signal_day) AS run_id
          FROM run_boundaries
      ),
      run_lengths AS (
          SELECT run_id,
                 MIN(signal_day) AS start_day,
                 MAX(signal_day) AS end_day,
                 COUNT(*) AS run_length
          FROM run_ids
          GROUP BY run_id
      )
      SELECT start_day, end_day, run_length
      FROM run_lengths
      WHERE run_id = (
          SELECT run_id
          FROM run_ids
          WHERE signal_day = (
              SELECT MAX(signal_day)
              FROM signal_days
          )
      );
info:
  statement_type: WITH (CTE)
  tables:
  - journal_entries
  - observed_items
  - prior_days
  - run_boundaries
  - run_ids
  - run_lengths
  - session_starts
  - signal_days
  - user_messages
  setup_blocks:
  - signal-day-sources
  database: ':memory:'
---
QUERY PLAN
|--CORRELATED SCALAR SUBQUERY 1
|  |--SCALAR SUBQUERY 2
|  |  |--SCAN subquery_0
|  |  |  `--COMPOUND QUERY
|  |  |     |--LEFT-MOST SUBQUERY
|  |  |     |  `--SCAN user_messages
|  |  |     |--UNION ALL
|  |  |     |  `--SCAN session_starts
|  |  |     |--UNION ALL
|  |  |     |  `--SCAN observed_items
|  |  |     |--UNION ALL
|  |  |     |  `--SCAN observed_items
|  |  |     |--UNION ALL
|  |  |     |  `--SCAN observed_items
|  |  |     `--UNION ALL
|  |  |        `--SCAN journal_entries
|  |  |--USE HASH TABLE FOR DISTINCT
|  |  |--USE SORTER FOR ORDER BY
|  |  `--SCAN signal_days
|  |--SCAN signal_days AS d1
|  |--CORRELATED SCALAR SUBQUERY 3
|  |  `--SCAN signal_days AS d2
|  |--SCAN prior_days
|  |--SCAN window_subquery_0
|  |  |--SCAN run_boundaries
|  |  `--USE SORTER FOR ORDER BY
|  `--SEARCH run_ids USING INDEX ephemeral_subquery_t111 (signal_day=?)
`--SCAN run_lengths
   |--SCAN run_ids
   `--USE SORTER FOR GROUP BY
